--- a/app/src/main/res/layout/dynamicdetail_activity_main.xml
+++ b/app/src/main/res/layout/dynamicdetail_activity_main.xml
@@ -7,11 +7,12 @@
     <include layout="@layout/foodtype_activity_head"></include>
 
     <ScrollView
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:minHeight="180dp"
-        >
+        android:paddingBottom="40dp"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,16 +65,18 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:text="无论在哪里，只要用心付出，就不后悔，人在做，天在看，感谢一路走来支持我的朋友们。" />
+                android:text="无论在哪里，只要用心付出，就不后悔，人在做，天在看，感谢一路走来支持我的朋友们。"
+                android:textSize="16dp" />
 
             <com.gxl.intelligentkitchen.ui.customview.FixedListView
                 android:id="@+id/dynamic_photo"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
                 android:scrollbars="none"
-                android:layout_marginTop="10dp"></com.gxl.intelligentkitchen.ui.customview.FixedListView>
+                android:verticalSpacing="20dp"></com.gxl.intelligentkitchen.ui.customview.FixedListView>
 
         </LinearLayout>
     </ScrollView>
